Fix API capabilities
